; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-stat-util.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-stat-util.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = call i32 (...) @test_files_same()
  %7 = call i32 (...) @test_is_symlink()
  %8 = call i32 (...) @test_path_is_fs_type()
  %9 = call i32 (...) @test_path_is_temporary_fs()
  %10 = call i32 (...) @test_fd_is_network_ns()
  %11 = call i32 (...) @test_device_major_minor_valid()
  %12 = call i32 (...) @test_device_path_make_canonical()
  ret i32 0
}

declare dso_local i32 @test_files_same(...) #1

declare dso_local i32 @test_is_symlink(...) #1

declare dso_local i32 @test_path_is_fs_type(...) #1

declare dso_local i32 @test_path_is_temporary_fs(...) #1

declare dso_local i32 @test_fd_is_network_ns(...) #1

declare dso_local i32 @test_device_major_minor_valid(...) #1

declare dso_local i32 @test_device_path_make_canonical(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
